k8s/base/plane/patch-plane-admin-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-admin-wl
  namespace: ims-demo-lab
spec:
  template:
    spec:
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
      containers:
        - name: plane-admin
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-tmp
              mountPath: /tmp
